fixed the overflow issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body {
     rgb(110, 136, 161) 90.2%
   );
   min-height: 100vh;
-  background-attachment: fixed;
+  overflow: hidden;
 }
 .container {
   max-width: 600px;
